# chess-project

./: .gitignore  CMakeLists.txt  README.md  chessboard.h  main.cpp  squares.cpp  squares.h
Player/: Player.cpp  Player.h
header/: Bishop.h  Color.h  King.h  Knight.h  Pawn.h  Piece.h  Player.h  Queen.h  Rook.h  SpecialPiece.h  chessInstructions.h  chessboard.h  chessvictory.h  chesswelcome.h  customize.h  displaychessboard.h  playGame.h  squares.h
source/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Piece.cpp  Player.cpp  Queen.cpp  Rook.cpp  SpecialPiece.cpp  chessInstructions.cpp  chessboard.cpp  chessvictory.cpp  chesswelcome.cpp  customize.cpp  displaychessboard.cpp  playGame.cpp  squares.cpp
src/: chessvictory.cpp
tests/: KnightTests.h  PlayerTests.cpp  PlayerTests.h  allPnKgTests.cpp  allTests.cpp  bishopTests.h  chessInstructions.h  chessboardtest.h  chessvictorytest.h  chesswelcometest.h  displaychessboardtest.h  kingTests.h  pawnTests.h  pieceTests.h  queenTests.h  rookTests.h  specialPieceTests.h  squarestest.cpp  squarestest.h  squaretest.h
